--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "verilog.linting.linter": "iverilog",
     "verilog.linting.path": "/opt/fpga/toolchain-iverilog/bin/",
-    "verilog.linting.iverilog.arguments": "-B /opt/fpga/toolchain-iverilog/lib/ivl /opt/fpga/toolchain-yosys/share/yosys/ice40/cells_sim.v",
+    "verilog.linting.iverilog.arguments": "-B /opt/fpga/toolchain-iverilog/lib/ivl /opt/fpga/toolchain-yosys/share/yosys/ice40/cells_sim.v src/top.v",
     "VsCodeTaskButtons.showCounter": false,
     "VsCodeTaskButtons.tasks": [
         {
@@ -29,5 +29,8 @@
             "label": "$(notebook-delete-cell) Clean",
             "task": "PRJ: clean",
         },
-    ]
+    ],
+    "files.associations": {
+        "icez0mb1e.h": "c"
+    }
 }
