--- a/.github/workflows/main-push-pr.yml
+++ b/.github/workflows/main-push-pr.yml
@@ -18,7 +18,7 @@ jobs:
         id: toolchain-cache
         with:
           path: /opt/fpga
-          key: ${{ runner.os }}-${{ hashFiles('~/toolchain.txt, ~/Makefile') }}
+          key: ${{ runner.os }}-${{ hashFiles('**') }}
       - name: Install toolchain
         if: steps.toolchain-cache.outputs.cache-hit != 'true'
         run: make toolchain
